# mysql_cn_parser

./: .gitignore  Makefile  README.md  configure.ac  mysql_cn_parser  mysql_cn_parser.ini  stop_words.txt  test.cc
src/: Makefile.am  common.h  mysql_cn_parser.cc  mysql_cn_parser.h
test/: data.txt  data2.txt  test.ini  test.sql
